[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy-inspector-egui = "0.14.0"
polars = {version="0.25.1", features=["lazy", "csv-file", "strings", "rows"]}
bevy_flycam  = { version = "0.9.0"}
block-mesh = "0.2.0"